2011-05-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: changed the source code to fixed the
	enterprise call in function "agents_get_agents".

	* operation/agentes/estado_agente.php: apply the change to the call
	"agents_get_agents".
	
	Fixes: #3303426

2011-05-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	operation/events/events.php: Changed the way to include flash
	graph include. 
	* pandoradb.oracle.sql: Changed datatype on max_value field of 
	talert_templates table.
	* pandoradb.data.oracle.sql: Fixes errors in Oracle installation.

2011-05-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events.php: Added functions_graph.php include in this
	file.

2011-05-18  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php: Fixed filter Group in Alert Detail.


2011-05-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/fgraph.php
	include/config_process.php
	include/functions_agents.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php: Several corrections 
	over sql queries for Oracle DBMS.
	* godmode/db/db_info.php: Added include to 
	functions_fsgraph.php

2011-05-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/fgraph.php	
	include/config_process.php
	operation/events/events.php: Added flash graph dependencies.

2011-05-17  Sergio Martin <sergio.martin@artica.es>

	* images/policies_error.png
	images/policies_ok.png: Added two new icons to 
	policy list

2011-05-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	include/functions_graph.php
	include/db/oracle.php
	include/functions_modules.php
	include/functions_network_components.php
	operation/agentes/estado_monitores.php: Several corrections over
	sql queries for Oracle DBMS.

2011-05-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php
	include/graphs/fgraph.php: Included new graph dependencies.
