@@ -1,3 +1,8 @@
+2011-05-19  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* operation/agentes/alerts_status.php 
+	include/functions_agents.php: Fixed filter Status in Alert Detail and pagination.
+
 2011-05-18 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_agents.php: changed the source code to fixed the
